--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django>=3.1.0,<3.2.0
-# djangorestframework>=3.11.1,<3.12.0
+djangorestframework>=3.11.1,<3.12.0
 psycopg2>=2.8.5,<2.9.0
 Pillow>=7.2.0,<7.3.0
 
